force-app/main/default/objects/Account/fields/CurrentWeatherDescription__c.field-meta.xml
<CustomField>
    <fullName>CurrentWeatherDescription__c</fullName>
    <label>CurrentWeatherDescription</label>
    <length>18</length>
    <type>Text</type>
</CustomField>