force-app/main/default/objects/Account/fields/CurrentWeatherIcon__c.field-meta.xml
<CustomField>
    <fullName>CurrentWeatherIcon__c</fullName>
    <label>CurrentWeatherIcon</label>
    <length>50</length>
    <type>Text</type>
</CustomField>