force-app/main/default/objects/Account/fields/CurrentWeatherTemp__c.field-meta.xml
<CustomField>
    <fullName>CurrentWeatherTemp__c</fullName>
    <label>CurrentWeatherTemp</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>