force-app/main/default/objects/Account/fields/ForecastWeatherDescription__c.field-meta.xml
<CustomField>
    <fullName>ForecastWeatherDescription__c</fullName>
    <label>ForecastWeatherDescription</label>
    <length>18</length>
    <type>Text</type>
</CustomField>