force-app/main/default/objects/Account/fields/ForecastWeatherIcon__c.field-meta.xml
<CustomField>
    <fullName>ForecastWeatherIcon__c</fullName>
    <label>ForecastWeatherIcon</label>
    <length>50</length>
    <type>Text</type>
</CustomField>