force-app/main/default/objects/Account/fields/ForecastWeatherTemp__c.field-meta.xml
<CustomField>
    <fullName>ForecastWeatherTemp__c</fullName>
    <label>ForecastWeatherTemp</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>