force-app/main/default/objects/Account/fields/WeatherCity__c.field-meta.xml
<CustomField>
    <fullName>WeatherCity__c</fullName>
    <label>WeatherCity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>